# AgentBridge

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  TODO.md  _test_integration.py  _test_llm.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md  architecture.zh-CN.md  chat.md  chat.zh-CN.md  kit-protocol.md  kit-protocol.zh-CN.md  mcp-server.md  mcp-server.zh-CN.md
examples/writing_system/: openapi.json  routes.py  schema.graphql  schema.sql
src/agentbridge/: __init__.py  __main__.py  agent.py  chat.py  cli.py  client_config.py  discovery.py  generator.py  io.py  kit.py  mcp_server.py  models.py  naming.py  policy.py  runtime.py  static.py  web.py
tests/: test_agent_json_parsing.py  test_agent_progress.py  test_chat_web.py  test_client_config.py  test_discovery.py  test_generator_runtime.py  test_mcp_server.py
