[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentbridge"
version = "0.1.0"
description = "Generate Agent Integration Kits for existing systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentBridge contributors" }]
keywords = ["agents", "mcp", "tools", "ai-assistant", "openapi", "graphql"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
agentbridge = "agentbridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

