[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agbr"
version = "0.2.0"
description = "Generate Agent Integration Kits for existing systems with AI-powered dynamic generation via Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AgentBridge contributors" }]
keywords = ["agents", "mcp", "tools", "ai-assistant", "openapi", "graphql", "claude", "anthropic", "claude-agent-sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
agent = ["claude-agent-sdk>=0.1.0"]
ai = ["anthropic>=0.30.0"]
all = ["claude-agent-sdk>=0.1.0", "anthropic>=0.30.0"]

[project.scripts]
agentbridge = "agentbridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
